--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -6,7 +6,28 @@
   <title>vue</title>
 </head>
 <body>
-  
+  <div id='app'></div>
 </body>
 <script src="./../dist/umd/vue.js"></script>
+
+<script>
+   var vm =  new Vue({
+     el:'app',
+     data(){
+       return {
+         name:'hp',
+         age:14,
+         arr:[{index:1},{index:2},{index:3}],
+         cc:{
+           name:1
+         }
+       }
+     }
+   })
+   
+   vm.arr.push({index:4})
+   console.log(vm.arr)
+
+  
+</script>
 </html>
