--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vue</title>
 </head>
+
 <body>
-  <div id='app'></div>
+  <div id='app'>
+    <div>name:{{name}}</div>
+    <div>age:{{age}}</div>
+  </div>
 </body>
 <script src="./../dist/umd/vue.js"></script>
 
 <script>
-   var vm =  new Vue({
-     el:'app',
-     data(){
-       return {
-         name:'hp',
-         age:14,
-         arr:[{index:1},{index:2},{index:3}],
-         cc:{
-           name:1
-         }
-       }
-     }
-   })
-   
-   vm.arr.push({index:4})
-   console.log(vm.arr)
+  var vm = new Vue({
+    el: '#app',
+    data() {
+      return {
+        name: 'hp',
+        age: 14,
+        arr: [{
+          index: 1
+        }, {
+          index: 2
+        }, {
+          index: 3
+        }],
+        cc: {
+          name: 1
+        }
+      }
+    }
+  })
 
-  
+  vm.arr.push({
+    index: 4
+  })
+  // console.log(vm.arr)
 </script>
+
 </html>
