--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -17,11 +17,17 @@
 <script src="./../dist/umd/vue.js"></script>
 
 <script>
-  Vue.options = {
-    beforeCreate: [function () {
-      console.log('haha ')
-    }]
-  }
+  Vue.mixin({
+    beforeCreate() {
+      console.log(1)
+    }
+  })
+
+  Vue.mixin({
+    beforeCreate() {
+      console.log(2)
+    }
+  })
   var vm = new Vue({
     el: '#app',
     data() {
@@ -41,7 +47,7 @@
       }
     },
     beforeCreate() {
-      console.log(1)
+      console.log(this)
     },
     methods: {
       my() {
@@ -51,7 +57,9 @@
   })
 
   setTimeout(() => {
-    vm.arr.push({index:4});
+    vm.arr.push({
+      index: 4
+    });
   }, 2000);
 
   // setTimeout(() => {
