--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -9,45 +9,20 @@
 
 <body>
   <div id='app'>
-    faf
-    <div class='aa' style='color:red'>name:{{name}}</div>
-    <div>age:{{age}}{{arr}}</div>
+    <div class='aa' style='color:red'>
+      11{{name}}
+    </div>
   </div>
 </body>
 <script src="./../dist/umd/vue.js"></script>
 
 <script>
-  Vue.mixin({
-    beforeCreate() {
-      console.log(1)
-    }
-  })
-
-  Vue.mixin({
-    beforeCreate() {
-      console.log(2)
-    }
-  })
   var vm = new Vue({
     el: '#app',
     data() {
       return {
-        name: 'hp',
-        age: 14,
-        arr: [{
-          index: 1
-        }, {
-          index: 2
-        }, {
-          index: 3
-        }],
-        cc: {
-          name: 1
-        }
+        name: '1'
       }
-    },
-    beforeCreate() {
-      console.log(this)
     },
     methods: {
       my() {
@@ -55,20 +30,24 @@
       }
     },
   })
+  setTimeout(() => {
+    vm.name = '3123123'
+  }, 1000);
 
   setTimeout(() => {
-    vm.arr.push({
-      index: 4
-    });
+  vm.name = 'abc'
   }, 2000);
 
-  // setTimeout(() => {
-  //   vm.arr[0].index=2;
-  //   console.log(vm)
-  // }, 4000);
+  // vm.$nextTick(()=>{
+  //    console.log(vm.$el.innerHTML)
+  // })
+
+  vm.$watch('name', (newValue, oldValue) => {
+    console.log(newValue, oldValue)
+  })
 
 
-  // console.log(vm.arr)
+  console.log(vm)
 </script>
 
 </html>
