--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -11,6 +11,7 @@
   <div id='app'>
     <div class='aa' style='color:red'>
       11{{name}}
+      <div>{{info}}</div>
     </div>
   </div>
 </body>
@@ -21,7 +22,18 @@
     el: '#app',
     data() {
       return {
-        name: '1'
+        name: 'hp',
+        age:25
+      }
+    },
+    watch: {
+      name:(newValue,oldValue)=>{
+        console.log(newValue, oldValue)
+      }
+    },
+    computed: {
+      info(){
+        return this.name + '-' + this.age;
       }
     },
     methods: {
@@ -35,19 +47,20 @@
   }, 1000);
 
   setTimeout(() => {
-  vm.name = 'abc'
+    vm.name = 'abc'
+    vm.age=30;
+    // console.log(vm)
   }, 2000);
+  // console.log(vm.$el.innerHTML)
 
-  // vm.$nextTick(()=>{
-  //    console.log(vm.$el.innerHTML)
+
+  // vm.$nextTick(() => {
+  //   console.log(vm.$el.innerHTML)
   // })
-
-  vm.$watch('name', (newValue, oldValue) => {
-    console.log(newValue, oldValue)
-  })
-
-
-  console.log(vm)
+  // vm.name = 'abc'
+  // vm.$watch('name', (newValue, oldValue) => {
+  //   console.log(newValue, oldValue)
+  // })
 </script>
 
 </html>
