--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -39,9 +39,9 @@
     },
   })
   
- setTimeout(() => {
-     vm.name = 'zs'
- }, 2000);
+//  setTimeout(() => {
+//      vm.name = 'zs'
+//  }, 2000);
  
   // console.log(vm.$el.innerHTML)
 
